Fixed display on mobile resolutions, fixed paths to some background images

--- a/client/styles.css
+++ b/client/styles.css
@@ -1,6 +1,10 @@
-body {
-  background: url("./resources/bamboo-watercolor2.png") no-repeat center center fixed;
+html {
+  background: url("./resources/bamboo-watercolor2.jpg") no-repeat center center fixed;
   background-size: cover;
+  min-height: 100%;
+}
+
+body {
   color: black;
   font-family:'P22 TaiChi W00 Regular';
 }
@@ -9,7 +13,6 @@ body {
 .logo {
   text-align: right;
   font-size: 4em;
-  /*font-family:'Japanese Brush Master W00 Rg';*/
 }
 
 /****** App Styles ******/
@@ -65,17 +68,17 @@ h1, p {
 }
 
 .buttonIncrement {
-  background-image: url('../resources/singleKoiUpWhite.png');
+  background-image: url('./resources/singleKoiUpWhite.png');
 }
 .buttonIncrement:hover {
-  background-image: url('../resources/singleKoiUpBlack.png');
+  background-image: url('./resources/singleKoiUpBlack.png');
   transition: background-image .25s;
 }
 .buttonDecrement {
-  background-image: url('../resources/singleKoiDownWhite.png');
+  background-image: url('./resources/singleKoiDownWhite.png');
 }
 .buttonDecrement:hover {
-  background-image: url('../resources/singleKoiDownBlack.png');
+  background-image: url('./resources/singleKoiDownBlack.png');
   transition: background-image .25s;
 }
 
@@ -86,25 +89,25 @@ h1, p {
 }
 
 .buttonRemoveTimer {
-  background-image: url('../resources/void.png');
+  background-image: url('./resources/void.png');
 }
 
 .buttonAddTimer {
-  background-image: url('../resources/plus.svg');
+  background-image: url('./resources/plus.svg');
   display: table;
   margin: 0 auto;
 }
 
 .buttonStart {
-  background-image: url('../resources/ic_play_arrow_black_24px.svg');
+  background-image: url('./resources/ic_play_arrow_black_24px.svg');
 }
 
 .buttonPause {
-  background-image: url('../resources/ic_pause_black_24px.svg');
+  background-image: url('./resources/ic_pause_black_24px.svg');
 }
 
 .buttonReset {
-  background-image: url('../resources/restart.svg');
+  background-image: url('./resources/restart.svg');
 }
 
 /****** Timer Styles: ******/
